syntax = "proto3";
package types;

message Chain {
	bytes latestBlockHash = 1;
	uint64 height = 2;
}
